i18 for all pages and logo update

--- a/public/locales/en/blog.json
+++ b/public/locales/en/blog.json
@@ -1,1 +1,1 @@
-{"coach":"Coach","nutrition specialist":"nutrition specialist","share on facebook":"Share on facebook"}
+{"about author":"is an author, coach and antreprenour. Owning her own fitness studio in Bistrita, she writes form her over 10 years experience of helping people reach their body goals.","all articles":"All articles","coach":"Coach","No description":"No description","No title":"No title","nutrition specialist":"nutrition specialist","share on facebook":"Share on facebook"}
