--- a/public/locales/ro/home.json
+++ b/public/locales/ro/home.json
@@ -1,1 +1,1 @@
-{"about author":"este autor, antrenor și antreprenor. Deținând propriul studio de fitness în Bistrița, ea scrie din experiența ei de peste 10 ani de a ajuta oamenii să-și atingă obiectivele corpului.","welcome_msg":"bun venit la aplicația mea"}
+{"welcome_msg":"bun venit la aplicația mea"}
