--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,1 +1,1 @@
-{"about author":"is an author, coach and antreprenour. Owning her own fitness studio in Bistrita, she writes form her over 10 years experience of helping people reach their body goals.","welcome_msg":"welcome to my app"}
+{"welcome_msg":"welcome to my app"}
